--- a/config.toml
+++ b/config.toml
@@ -117,15 +117,15 @@ enableEmoji = true
     url = "/talk/"
     weight = 4
   [[menu.header]]
-    name = "Cursos"
-    title = "Cursos"
+    name = "Academia"
+    title = "Academia"
     url = "/collection/"
     weight = 5
     
   # Configure footer  
   [[menu.footer]]
     name = "Contácto"
-    title = "Formulario contácto"
+    title = "Contácto"
     url = "/contact/"
     weight = 2
 
