--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ enableEmoji = true
 
   # Configuration of https://utteranc.es/ for comments
   [params.utterances]
-    use_utterances = true
+    use_utterances = false
     repo_name = "arturocdb/10xfaster"
     issue_term = "pathname" # url, pathname, or title
     theme = "boxy-light"
